--- a/partials/start.html
+++ b/partials/start.html
@@ -1,7 +1,23 @@
-<h1>Welcome, Space Pirate</h1>
+<h3>welcome, starman:</h3>
 
 <p>
-  You have been marooned in the spaceship X-C1 by your pirate buddies.  You are
-  adrift in deep space.  The solar sails must be raised in order to manuever the
-  ship to a survivable location.  [Click here to login to the ships computer]
+  You are aboard the spaceship X-C1. The ship has been attacked by pirates. Life support is limited.  This ship is adrift in deep space. The solar sails must be raised in order to manuever the ship.
 </p>
+
+<p>
+  SYS_command>> <span class="blink">select</span>
+</p>
+
+<p>
+  <a ui-sref='win'>0: raise sails</a>
+</p>
+
+<p>
+  <a ui-sref='death'>1: fight pirate</a>
+</p>
+
+<!-- <form ng-submit="run()" role="form">
+  <input type="text" ng-model="user_input" class="terminal">
+</form> -->
+
+<!-- terminal settings option, on click health decrement -->
