--- a/css/space_terminal.css
+++ b/css/space_terminal.css
@@ -6,6 +6,22 @@ body {
   font-family: Courier;
   margin: 30px;
   border: 3px double #81D640;
+  height: 400px;
+  max-width: 900px;
+}
+
+.container {
+  max-width: 900px;
+
+}
+
+.log {
+  margin-bottom: 50px;
+}
+
+.sys_command {
+  line-height: .8;
+  margin-bottom: 50px;
 }
 
 
@@ -45,4 +61,9 @@ h3 {
   background-color: #292E28;
   border: 0px;
   box-shadow: 0 0 0;
+}
+
+#status {
+  position: fixed;
+  top: 395px;
 }
