--- a/partials/death.html
+++ b/partials/death.html
@@ -1,6 +1,10 @@
 <p>
   Systems could not overcome PirateXML.rb virus.  Anomaly detected.  Venting all
   life support.  See you, space cowboy.
-
-  [You have died to death]
+</p>
+<p>
+  [LIFE SUPPORT: 0]
+</p>
+<p>
+  [CLIENT DEATH DETECTED]    
 </p>
