--- a/partials/start.html
+++ b/partials/start.html
@@ -1,20 +1,15 @@
-<h3>welcome, starman:</h3>
+<h3>welcome, star pirate:</h3>
 
-<p>
-  You are aboard the spaceship X-C1. The ship has been attacked by pirates. Life support is limited.  This ship is adrift in deep space. The solar sails must be raised in order to manuever the ship.
+<p class="log">
+  After raiding the derelict XC1 starship, your ship has taken damage. You are marooned. Life support is limited.  This ship is adrift in deep space. The solar sails must be raised in order to manuever home.
 </p>
 
-<p>
-  SYS_command>> <span class="blink">select</span>
-</p>
+<div class="sys_command">
+  <p>SYS_command>> <span class="blink">click to select</span></p>
+  <p><a ui-sref='win'>[raise_solar_sails]</a></p>
+  <p><a ui-sref='death'>[vent_life_support]</a></p>
+</div>
 
-<p>
-  <a ui-sref='win'>0: raise sails</a>
-</p>
-
-<p>
-  <a ui-sref='death'>1: fight pirate</a>
-</p>
 
 <!-- <form ng-submit="run()" role="form">
   <input type="text" ng-model="user_input" class="terminal">
