Add Engine state.

--- a/partials/start.html
+++ b/partials/start.html
@@ -6,7 +6,7 @@
 
 <div class="sys_command">
   <p>SYS_command>> <span class="blink">click to select</span></p>
-  <p><a ui-sref='win'>[raise_solar_sails]</a></p>
+  <p><a ui-sref='engines'>[access_engine_terminal]</a></p>
   <p><a ui-sref='death'>[vent_life_support]</a></p>
 </div>
 
