--- a/partials/lifesupport/partials/start.html
+++ b/partials/lifesupport/partials/start.html
@@ -1,16 +1,13 @@
 <h3>welcome, star pirate:</h3>
 
 <p class="log">
-  After raiding the derelict XC1 starship, your ship has taken damage.
-  You are marooned. Life support is limited.  This ship is adrift in deep space.
-  The solar sails must be raised in order to manuever home.
+  After raiding the derelict XC1 starship, your ship has taken damage. You are marooned. Life support is limited.  This ship is adrift in deep space. The solar sails must be raised in order to manuever home.
 </p>
 
 <div class="sys_command">
   <p>SYS_command>> <span class="blink">click to select</span></p>
   <p><a ui-sref='engines'>[access_engine_terminal]</a></p>
-  <p><a ui-sref='lifesupport'>[access_life_support_systems]</a></p>
-  <p><a ui-sref='security'>[access_security_terminal]</a></p>
+  <p><a ui-sref='death'>[vent_life_support]</a></p>
 </div>
 
 
