Add work on updating status.

--- a/css/space_terminal.css
+++ b/css/space_terminal.css
@@ -52,7 +52,7 @@ h3 {
     @-webkit-keyframes blink {
       to {
         color: #292E28;
-        text-shadow: 0 0 3px #5C7549;
+        text-shadow: 0 0 3px #6BD128;
       }
     }
 
