--- a/partials/engine/nav.html
+++ b/partials/engine/nav.html
@@ -8,7 +8,7 @@
   <p><a ui-sref='engine_status_failure'>[report_engine_status]</a></p>
   <p><a ui-sref='reboot_prop_false'>[reboot_propulsion_computer]</a></p>
   <p><a ui-sref='raise_sails_false'>[raise_solar_sails]</a></p>
-  <p><a ui-sref='nav'>[set_navigation]</a></p>
+  <p><a ui-sref='nav'>[set_navigation] <<</a></p>
   <br>
   <p><a ui-sref='start'>[select_terminal]</a></p>
 
