--- a/partials/lifesupport/cabin_repress.html
+++ b/partials/lifesupport/cabin_repress.html
@@ -4,7 +4,7 @@
 <p>Select Command<span class="blink">:</span></p>
 
 <div class="sys_command">
-  <p><a ui-sref='cabin_repress'>[cabin_repress]</a></p>
+  <p><a ui-sref='cabin_repress'>[cabin_repress] <<</a></p>
   <p><a ui-sref='more_air'>[increase_O2]</a></p>
   <p><a ui-sref='recycle'>[recycle_atmo]</a></p>
   <p><a ui-sref='death'>[vent_atmosphere] - <strong>CAUTION</strong></a></p>
