--- a/partials/engine/engage_engines_false.html
+++ b/partials/engine/engage_engines_false.html
@@ -4,7 +4,7 @@
 <p>Select Engine Command<span class="blink">:</span></p>
 
 <div class="sys_command">
-  <p><a ui-sref='engage_engines_false'>[engage_main_propulsion]</a></p>
+  <p><a ui-sref='engage_engines_false'>[engage_main_propulsion] <<</a></p>
   <p><a ui-sref='engine_status_failure'>[report_engine_status]</a></p>
   <p><a ui-sref='reboot_prop_false'>[reboot_propulsion_computer]</a></p>
   <p><a ui-sref='raise_sails_false'>[raise_solar_sails]</a></p>
