--- a/partials/lifesupport/more_air.html
+++ b/partials/lifesupport/more_air.html
@@ -5,7 +5,7 @@
 
 <div class="sys_command">
   <p><a ui-sref='cabin_repress'>[cabin_repress]</a></p>
-  <p><a ui-sref='more_air'>[increase_O2]</a></p>
+  <p><a ui-sref='more_air'>[increase_O2] <<</a></p>
   <p><a ui-sref='recycle'>[recycle_atmo]</a></p>
   <p><a ui-sref='death'>[vent_atmosphere] - <strong>CAUTION</strong></a></p>
   <br>
