--- a/partials/security/identify_lifeforms.html
+++ b/partials/security/identify_lifeforms.html
@@ -4,8 +4,8 @@
 <p>Select Command<span class="blink">:</span></p>
 
 <div class="sys_command">
-  <p><a ui-sref='lifeform_scan'>[lifeform_scan] <<</a></p>
-  <p><a ui-sref='identify_lifeforms'>[identify_lifeforms]</a></p>
+  <p><a ui-sref='lifeform_scan'>[lifeform_scan]</a></p>
+  <p><a ui-sref='identify_lifeforms'>[identify_lifeforms] <<</a></p>
   <p><a ui-sref='crew_status'>[crew_status]</a></p>
   <p><a ui-sref='seal_bulkheads'>[seal_bulkheads]</a></p>
   <p><a ui-sref='open_bulkheads'>[open_bulkheads] - <strong>CAUTION</strong></a></p>
@@ -13,8 +13,9 @@
   <p><a ui-sref='start'>[select_terminal]</a></p>
 </div>
 
-console.log($scope.lifeform);
-
 <p>
-    >>LIFEFORMS_DETECTED: {{ lifeform }}
+    >>LIFEFORM_IDENTITY: [type:HUMAN]; [loc:BRIDGE]; [auth:CLEARED];
+</p>
+<p>
+    >>LIFEFORM_IDENTITY: [type:HUMAN]; [loc:ENGINE_ROOM]; [auth:INTRUDER];
 </p>
