--- a/partials/security/security.html
+++ b/partials/security/security.html
@@ -4,7 +4,7 @@
 <p>Select Command<span class="blink">:</span></p>
 
 <div class="sys_command">
-  <p><a ui-sref='lifeform_scan'>[lifeform_scan]</a></p>
+  <p><a ui-sref='lifeform_scan' ng-click="update_lifeform()">[lifeform_scan]</a></p>
   <p><a ui-sref='identify_lifeforms'>[identify_lifeforms]</a></p>
   <p><a ui-sref='crew_status'>[crew_status]</a></p>
   <p><a ui-sref='seal_bulkheads'>[seal_bulkheads]</a></p>
