--- a/partials/lifesupport/vent.html
+++ b/partials/lifesupport/vent.html
@@ -7,7 +7,21 @@
   <p><a ui-sref='cabin_repress'>[cabin_repress]</a></p>
   <p><a ui-sref='more_air'>[increase_O2]</a></p>
   <p><a ui-sref='recycle'>[recycle_atmo]</a></p>
-  <p><a ui-sref='({ :bulkheads })' ng-click="vent_engine_room()">[vent_engine_room] - <strong>CAUTION</strong> <<</a></p>
+  <p><a ui-sref='{{ bulkheads }}' ng-click="vent_engine_room()">[vent_engine_room] - <strong>CAUTION</strong> <<</a></p>
   <br>
   <p><a ui-sref='start'>[select_terminal]</a></p>
+</div>
+
+<div class="sys_command">
+  <p>
+    Engine Room successfully vented.
+  </p>
+
+  <p>
+    >>LIFEFORM_TERMINATED: [type:HUMAN]; [loc:ENGINE_ROOM]; [auth:INTRUDER];
+  </p>
+
+  <p>
+    Main Power Restored.
+  </p>
 </div>
