--- a/partials/security/seal_bulkheads.html
+++ b/partials/security/seal_bulkheads.html
@@ -4,11 +4,11 @@
 <p>Select Command<span class="blink">:</span></p>
 
 <div class="sys_command">
-  <p><a ui-sref='lifeform_scan'>[lifeform_scan]</a></p>
+  <p><a ui-sref='lifeform_scan' ng-click="update_lifeform_count()">[lifeform_scan]</a></p>
   <p><a ui-sref='identify_lifeforms'>[identify_lifeforms]</a></p>
   <p><a ui-sref='crew_status'>[crew_status]</a></p>
-  <p><a ui-sref='seal_bulkheads'>[seal_bulkheads] <<</a></p>
-  <p><a ui-sref='open_bulkheads'>[open_bulkheads] - <strong>CAUTION</strong></a></p>
+  <p><a ui-sref='seal_bulkheads' ng-click="seal_bulkheads()">[seal_bulkheads] <<</a></p>
+  <p><a ui-sref='open_bulkheads' ng-click="open_bulkheads()">[open_bulkheads] - <strong>CAUTION</strong></a></p>
   <br>
   <p><a ui-sref='start'>[select_terminal]</a></p>
 </div>
