--- a/partials/engine/reboot_prop_true.html
+++ b/partials/engine/reboot_prop_true.html
@@ -6,10 +6,14 @@
 <div class="sys_command">
   <p><a ui-sref='engage_engines_false'>[engage_main_propulsion]</a></p>
   <p><a ui-sref='engine_status_failure'>[report_engine_status]</a></p>
-  <p><a ui-sref='reboot_prop/{{ power }}'>[reboot_propulsion_computer]</a></p>
+  <p><a ui-sref='reboot_prop_false'>[reboot_propulsion_computer] <<</a></p>
   <p><a ui-sref='raise_sails_false'>[raise_solar_sails]</a></p>
   <p><a ui-sref='nav'>[set_navigation]</a></p>
   <br>
   <p><a ui-sref='start'>[select_terminal]</a></p>
 
 </div>
+
+<p>
+    <span class="blink">SUCCESS:</span> propulsion_computer_rebooted [POWER:nominal]
+</p>
