--- a/partials/security/identify_lifeforms_1.html
+++ b/partials/security/identify_lifeforms_1.html
@@ -5,8 +5,8 @@
 
 <div class="sys_command">
   <p><a ui-sref='lifeform_scan' ng-click="update_lifeform_count()">[lifeform_scan]</a></p>
-  <p><a ui-sref='identify_lifeforms'>[identify_lifeforms] <<</a></p>
-  <p><a ui-sref='crew_status'>[crew_status]</a></p>
+  <p><a ui-sref='identify_lifeforms_{{ lifeform }}'>[identify_lifeforms]</a></p>
+  <p><a ui-sref='crew_status_{{ lifeform }}'>[crew_status]</a></p>
   <p><a ui-sref='seal_bulkheads' ng-click="seal_bulkheads()">[seal_bulkheads]</a></p>
   <p><a ui-sref='open_bulkheads' ng-click="open_bulkheads()">[open_bulkheads] - <strong>CAUTION</strong></a></p>
   <br>
