add victory settings

--- a/partials/engine/nav_undeployed.html
+++ b/partials/engine/nav_undeployed.html
@@ -15,5 +15,5 @@
 </div>
 
 <p>
-    <span class="blink">SUCCESS:</span> propulsion_computer_rebooted [POWER:nominal]
+    Navigation not avaliable: No Propulsion Source Detected.
 </p>
