--- a/partials/engine/raise_sails_deployed.html
+++ b/partials/engine/raise_sails_deployed.html
@@ -15,5 +15,5 @@
 </div>
 
 <p>
-    <span class="blink">SUCCESS:</span> propulsion_computer_rebooted [POWER:nominal]
+    <span class="blink">ERROR:</span> sails_not_deployed_['system requires reboot']
 </p>
