--- a/partials/win.html
+++ b/partials/win.html
@@ -1,3 +1,9 @@
+<link href="css/win_terminal.css" rel="stylesheet">
+
+<div class="text-center">
+  <h2>YOU WIN</h2>
+</div>
+
 <p>
-  All systems nominal.  Course set for land lubbers [port]
+  <span class="blink">All systems nominal.</span>  Course set for land lubbers [port]
 </p>
