--- a/partials/engine/raise_sails_online.html
+++ b/partials/engine/raise_sails_online.html
@@ -15,5 +15,5 @@
 </div>
 
 <p>
-    <span class="blink">SUCCESS:</span> propulsion_computer_rebooted [POWER:nominal]
+    <span class="blink">SAILS DEPLOYED -- SAILS DEPLOYED -- SAILS DEPLOYED:</span>
 </p>
