--- a/partials/engine/reboot_prop_false.html
+++ b/partials/engine/reboot_prop_false.html
@@ -6,14 +6,14 @@
 <div class="sys_command">
   <p><a ui-sref='engage_engines_false'>[engage_main_propulsion]</a></p>
   <p><a ui-sref='engine_status_failure'>[report_engine_status]</a></p>
-  <p><a ui-sref='reboot_prop_false'>[reboot_propulsion_computer] <<</a></p>
-  <p><a ui-sref='raise_sails_false'>[raise_solar_sails]</a></p>
-  <p><a ui-sref='nav'>[set_navigation]</a></p>
+  <p><a ui-sref='reboot_prop_{{ power }}' ng-click="reboot_eng_comp()">[reboot_propulsion_computer]</a></p>
+  <p><a ui-sref='raise_sails_{{ eng_comp_status }}' ng-click="raise_sails()">[raise_solar_sails]</a></p>
+  <p><a ui-sref='nav_{{ sail }}'>[set_navigation]</a></p>
   <br>
   <p><a ui-sref='start'>[select_terminal]</a></p>
 
 </div>
 
 <p>
-    <span class="blink">ERROR:</span> reboot_not_performed_['low power']
+    <span class="blink">ERROR:</span> reboot_not_performed:[unavailable on reserve power]
 </p>
