Change win and death screens

--- a/partials/death.html
+++ b/partials/death.html
@@ -1,6 +1,11 @@
+<link href="css/win_terminal.css" rel="stylesheet">
+
 <p>
   Systems could not overcome PirateXML.rb virus.  Anomaly detected.  Venting all
-  life support.  See you, space cowboy.
+  life support.
+</p>
+<p>
+  See you, space pirate.
 </p>
 <p>
   [LIFE SUPPORT: 0]
