--- a/partials/win.html
+++ b/partials/win.html
@@ -1,9 +1,7 @@
 <link href="css/win_terminal.css" rel="stylesheet">
 
-<div class="text-center">
-  <h2>YOU WIN</h2>
-</div>
+<span class="blink"><h2>YOU WIN</h2></span>
 
 <p>
-  <span class="blink">All systems nominal.</span>  Course set for land lubbers [port]
+  All systems nominal. Course set for Earth.
 </p>
