--- a/partials/ventdeath.html
+++ b/partials/ventdeath.html
@@ -1,3 +1,6 @@
+<link href="../css/win_terminal.css" rel="stylesheet">
+
+<h3><span class="blink">YOU DIED</span></h3>
 <p>
   You opened the doors to space, and were sucked out into the vaccuum. Arrr, that bites.
 </p>
