fix sails routing bug

--- a/partials/engine/engine_status_failure.html
+++ b/partials/engine/engine_status_failure.html
@@ -19,7 +19,7 @@
         MAIN_PROPULSION: FUEL LEVEL: 0%
     </p>
     <p>
-        SOLAR_SAILS: UNDEPLOYED
+        SOLAR_SAILS: {{ sail }}
     </p>
     <p>
         NAVIGATION: INOPERATIVE
