fixed crew status route bug

--- a/partials/lifesupport/recycle.html
+++ b/partials/lifesupport/recycle.html
@@ -6,8 +6,8 @@
 <div class="sys_command">
   <p><a ui-sref='cabin_repress'>[cabin_repress]</a></p>
   <p><a ui-sref='more_air'>[increase_O2]</a></p>
-  <p><a ui-sref='recycle'>[recycle_atmo]</a></p>
-  <p><a ui-sref='{{ bulkheads }}' ng-click="vent_engine_room()">[vent_engine_room] - <strong>CAUTION</strong> <<</a></p>
+  <p><a ui-sref='recycle'>[recycle_atmo] <<</a></p>
+  <p><a ui-sref='{{ bulkheads }}' ng-click="vent_engine_room()">[vent_engine_room] - <strong>CAUTION</strong></a></p>
   <br>
   <p><a ui-sref='start'>[select_terminal]</a></p>
 </div>
