--- a/partials/security/crew_status.html
+++ b/partials/security/crew_status.html
@@ -26,7 +26,7 @@
     >>Swab Cunningham [DECEASED]
   </p>
   <p>
-      >>Swab PLAYER {{ player.name }} //fake variable right now
+    >>Swab Skywalker [CLIENT] [loc:BRIDGE] 
   </p><br>
   <p>
     <span class="blink">ADDITIONAL LIFE SIGNALS DETECTED</span> - LIFEFORM SCAN RECOMMENDED.
