--- a/partials/security/crew_status_1.html
+++ b/partials/security/crew_status_1.html
@@ -26,6 +26,6 @@
     >>Swab Cunningham [DECEASED]
   </p>
   <p>
-    >>Swab PLAYER {{ player.name }} //fake variable right now
-  </p><br>
+    >>Swab Skywalker [CLIENT] [loc:BRIDGE]
+  </p>
 </div>
