--- a/partials/security/crew_status.html
+++ b/partials/security/crew_status.html
@@ -11,7 +11,7 @@
 
 <div class="sys_command">
   <p>
-      >>Captain Redbeard [DECEASED]
+    >>Captain Redbeard [DECEASED]
   </p>
   <p>
     >>1st Mate Smitty McGoo [DECEASED]
@@ -26,8 +26,8 @@
     >>Swab Cunningham [DECEASED]
   </p>
   <p>
-    >>Swab Skywalker [CLIENT] [loc:BRIDGE] 
-  </p><br>
+    >>Swab Shepard [CLIENT] [loc:BRIDGE]
+  </p>
   <p>
     <span class="blink">ADDITIONAL LIFE SIGNALS DETECTED</span> - LIFEFORM SCAN RECOMMENDED.
   </p>
