--- a/partials/security/crew_status_1.html
+++ b/partials/security/crew_status_1.html
@@ -26,6 +26,6 @@
     >>Swab Cunningham [DECEASED]
   </p>
   <p>
-    >>Swab Skywalker [CLIENT] [loc:BRIDGE]
-  </p>
+    >>Swab Shepard [CLIENT] [loc:BRIDGE]
+  </p><br>
 </div>
