--- a/partials/start.html
+++ b/partials/start.html
@@ -1,9 +1,10 @@
 <h3>welcome, star pirate:</h3>
 
 <p class="log">
-  After raiding the derelict XC1 starship, your ship has taken damage.
+  After raiding the derelict XC1 starship, your ship has been sabotaged.
   You are marooned. Life support is limited.  This ship is adrift in deep space.
-  The solar sails must be raised in order to manuever home.
+  The solar sails must be raised in order to manuever home.  Control the ship systems
+  from the bridge main terminal below.
 </p>
 
 <div class="sys_command">
@@ -12,10 +13,3 @@
   <p><a ui-sref='lifesupport'>[access_life_support_systems]</a></p>
   <p><a ui-sref='security'>[access_security_terminal]</a></p>
 </div>
-
-
-<!-- <form ng-submit="run()" role="form">
-  <input type="text" ng-model="user_input" class="terminal">
-</form> -->
-
-<!-- terminal settings option, on click health decrement -->
