--- a/partials/ventdeath.html
+++ b/partials/ventdeath.html
@@ -1,4 +1,4 @@
-<link href="../css/win_terminal.css" rel="stylesheet">
+<link href="css/win_terminal.css" rel="stylesheet">
 
 <h3><span class="blink">YOU DIED</span></h3>
 <p>
