--- a/partials/engine/engage_engines_false.html
+++ b/partials/engine/engage_engines_false.html
@@ -6,6 +6,7 @@
 <div class="sys_command">
   <p><a ui-sref='engage_engines_false'>[engage_main_propulsion]</a></p>
   <p><a ui-sref='engine_status_failure'>[report_engine_status]</a></p>
+  <p><a ui-sref='restore_power_{{ atmo_pressure }}_{{ lifeform }}' ng-click="restore_power()">[restore_power]</a></p>
   <p><a ui-sref='reboot_prop_{{ power }}' ng-click="reboot_eng_comp()">[reboot_propulsion_computer]</a></p>
   <p><a ui-sref='raise_sails_{{ eng_comp_status }}' ng-click="raise_sails()">[raise_solar_sails]</a></p>
   <p><a ui-sref='nav_{{ sail }}'>[set_navigation]</a></p>
